--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -5,11 +5,11 @@
  	 	 	"eng": "Inventory"
  	 	},
  	 	"quest": {
- 	 	 	"trans": "Quest",
+ 	 	 	"trans": "Suche",
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chat",
+ 	 	 	"trans": "Plaudern",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -640,7 +640,7 @@
  	 	"healingArea1": {
  	 	 	"name": {
  	 	 	 	"trans": "Pain Away™ Spray",
- 	 	 	 	"eng": "Pain Away™ Spray"
+ 	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Du und deine Freunde haben gemeinsame Kopfschmerzen? Benutzt Pain Away™ Spray und die Schmerzen sind vergessen!",
@@ -1150,7 +1150,7 @@
  	 	},
  	 	"chatExploitProtect": {
  	 	 	"name": {
- 	 	 	 	"trans": "CyberTunnel VPN",
+ 	 	 	 	"trans": "Cybertunnel VPN",
  	 	 	 	"eng": "CyberTunnel VPN"
  	 	 	},
  	 	 	"description": {
@@ -1224,6 +1224,36 @@
  	 	 	 	],
  	 	 	 	"trans": "Einmal geworfen Blendet sie alle Feinde in deiner Umgebung und Erhöht die Chance einer Flucht um ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser0v1": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Enthält Fragmente von Advance AI, die mit dem Upgrade von Ausrüstungen unterstützt werden. Bei Verwendung verringert sich die Chance des destruktiven Versagens um $ 0}% (stapelbar) für ${duration} Minuten",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaserAll": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"maxStack",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Enthält Fragmente von Advance AI, die mit dem Upgrade von Ausrüstungen unterstützt werden. Bei Verwendung verringert sich die Chance des destruktiven Fehlers um ${percent}% (stapelbar für ${maxStack} mal) für ${duration} Minuten. Dieser Effekt gilt für alle Spieler online",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser4": {
+ 	 	 	"name": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Kalibrierung AI SHARD (${percent}%)",
+ 	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	}
  	},
@@ -1625,7 +1655,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Das Level der Gegenstände, die du mit Caches druckst, wird von denen 3D-Druck Fähigkeiten bestimmt, \r\n         Verbessere deine 3D-Druck Fähigkeiten um Gegensände mit hohem Level Drucken zu können. \r\n        \r\n         Du findest den molekularen 3D-Drucker in [Zentrum], nutze ihn um einige Caches zu Drucken, und so deine Fähigkeiten zu verbessern",
- 	 	 	 	"eng": "The level of items you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
+ 	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
  	 	"newbie4": {
@@ -1769,7 +1799,7 @@
  	 	 	 	"eng": "system link"
  	 	 	},
  	 	 	"streetCred": {
- 	 	 	 	"trans": "Street Cred",
+ 	 	 	 	"trans": "Straße glaubt",
  	 	 	 	"eng": "Street Cred"
  	 	 	},
  	 	 	"status": {
@@ -1893,6 +1923,30 @@
  	 	 	"cantEnterError": {
  	 	 	 	"trans": "Du musst mindestens Level 4 sein, um auf den Markt zugreifen zu können",
  	 	 	 	"eng": "You need to be at least level 4 to access the market"
+ 	 	 	},
+ 	 	 	"levelSelect": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Stufe",
+ 	 	 	 	 	"eng": "Level"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"tierSelection": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Seltenheit",
+ 	 	 	 	 	"eng": "Rarity"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"noItems": {
+ 	 	 	 	"trans": "Es gibt derzeit keine Artikel zum Verkauf für diese Kategorie",
+ 	 	 	 	"eng": "there is currently no items on sale for this category"
+ 	 	 	},
+ 	 	 	"buy": {
+ 	 	 	 	"trans": "Kaufen",
+ 	 	 	 	"eng": "Purchase"
+ 	 	 	},
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "Entfernen",
+ 	 	 	 	"eng": "Remove"
  	 	 	}
  	 	},
  	 	"chat": {
@@ -1987,7 +2041,7 @@
  	 	},
  	 	"tutorial": {
  	 	 	"title": {
- 	 	 	 	"trans": "Tutorial",
+ 	 	 	 	"trans": "Lernprogramm",
  	 	 	 	"eng": "Tutorial"
  	 	 	}
  	 	},
@@ -2239,7 +2293,7 @@
  	 	 	 	"eng": "All Apps"
  	 	 	},
  	 	 	"tutorial": {
- 	 	 	 	"trans": "Tutorial",
+ 	 	 	 	"trans": "Lernprogramm",
  	 	 	 	"eng": "Tutorial"
  	 	 	}
  	 	},
@@ -2333,6 +2387,10 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "Splitter wird entschlüsselt",
  	 	 	 	 	"eng": "Decrypting shard"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Sie können diese Seite verlassen und später wiederkommen",
+ 	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
  	 	 	"noEquipment": {
@@ -2366,6 +2424,26 @@
  	 	 	"upgradeButton": {
  	 	 	 	"trans": "Kalibrieren (Verbessern)",
  	 	 	 	"eng": "Calibrate"
+ 	 	 	},
+ 	 	 	"increaseSuccessButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Erfolgsrate erhöhen",
+ 	 	 	 	 	"eng": "Increase Success Rate"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"preventDestructionButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Verhinderung der Zerstörung",
+ 	 	 	 	 	"eng": "Prevent Destruction"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"failureRateNoBreak": {
+ 	 	 	 	"trans": "Chance des sicheren Versagens",
+ 	 	 	 	"eng": "Chance of safe failure"
+ 	 	 	},
+ 	 	 	"activateDescription": {
+ 	 	 	 	"trans": "Ein Kalibrierkern ist erforderlich, um die Geräte zu kalibrieren",
+ 	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	}
  	 	},
  	 	"itemInbox": {
@@ -2633,6 +2711,21 @@
  	 	 	 	 	"trans": "Units Kaufen",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"molecularPrinter": {
+ 	 	 	 	"printLevelDisplay": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	"level"
+ 	 	 	 	 	 	],
+ 	 	 	 	 	 	"trans": "Druckstufe ${level} Ausrüstungen",
+ 	 	 	 	 	 	"eng": "printing level ${level} equipments"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "Der Ausstattungsdruck basiert auf Ihrem Druckrang, steigt Ihr Druckrang auf, indem Sie weitere Artikel drucken",
+ 	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
+ 	 	 	 	 	}
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"travel": {
@@ -2653,6 +2746,12 @@
  	 	 	"quality": {
  	 	 	 	"trans": "Qualität",
  	 	 	 	"eng": "quality"
+ 	 	 	},
+ 	 	 	"itemUpgradeButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Aktualisierung",
+ 	 	 	 	 	"eng": "upgrade"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"apps": {
@@ -2670,7 +2769,11 @@
  	 	 	},
  	 	 	"skipQueue": {
  	 	 	 	"trans": "Warteschlange überspringen",
- 	 	 	 	"eng": "Zeitsprung-Warteschlange"
+ 	 	 	 	"eng": "Skip Queue"
+ 	 	 	},
+ 	 	 	"block-list": {
+ 	 	 	 	"trans": "Blockliste",
+ 	 	 	 	"eng": "Block List"
  	 	 	}
  	 	},
  	 	"gang": {
@@ -3106,6 +3209,13 @@
  	 	 	"showCanJoinOnly": {
  	 	 	 	"trans": "Nur Dungeons zeigen, die ich betreten kann",
  	 	 	 	"eng": "Only show dungeons I can join"
+ 	 	 	},
+ 	 	 	"playerCount": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"playerCount"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${playerCount} Spieler (s) verbunden",
+ 	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
  	 	"localCombat": {
@@ -3124,6 +3234,22 @@
  	 	 	"occupiedBy": {
  	 	 	 	"trans": "Besetzt von",
  	 	 	 	"eng": "Occupied by"
+ 	 	 	},
+ 	 	 	"topGang": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"gangName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Belegt um ${gangName}",
+ 	 	 	 	 	"eng": "Occupied by ${gangName}"
+ 	 	 	 	},
+ 	 	 	 	"occupationPoints": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"points"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${points} Berufskontrolle",
+ 	 	 	 	 	"eng": "${points} Occupation Control"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"craftingPage": {
@@ -3317,7 +3443,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Ihr Konto wurde aufgrund verdächtigen Aktivitäten automatisch vom System GESPERRT",
- 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Suspicious Activity"
+ 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"content": {
  	 	 	 	"trans": "Wenn du Fragen hast, wende dich bitte an Dexter direkt über unseren offizielle Discord (den Link findest du im Menü (-> Links) oder per E-Mail an ching.huang.dexter@gmail.com",
@@ -3331,6 +3457,110 @@
  	 	 	 	 	"eng": "Search all players"
  	 	 	 	}
  	 	 	}
+ 	 	},
+ 	 	"minigame": {
+ 	 	 	"colors": {
+ 	 	 	 	"win": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Entschlüsselung erfolgreich",
+ 	 	 	 	 	 	"eng": "Decryption successful"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "wird bearbeitet",
+ 	 	 	 	 	 	"eng": "processing"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Sie haben eine gesperrte Beutekiste mit Farbtastatur gefunden, die Sie mit der korrekten Farbe der Farben entsperren können.",
+ 	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
+ 	 	 	 	},
+ 	 	 	 	"progress": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Fortschritt freischalten",
+ 	 	 	 	 	 	"eng": "Unlock progress"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"countdownSubtitle": {
+ 	 	 	 	 	"trans": "Sekunden",
+ 	 	 	 	 	"eng": "seconds"
+ 	 	 	 	},
+ 	 	 	 	"colorBox": {
+ 	 	 	 	 	"trans": "Klicken Sie unten auf diese Farbe",
+ 	 	 	 	 	"eng": "Click on this color below"
+ 	 	 	 	},
+ 	 	 	 	"lose": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Entschlüsselung fehlgeschlagen",
+ 	 	 	 	 	 	"eng": "Decryption failed"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "Klicken Sie auf die richtige Farbfolge, um freizuschalten",
+ 	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
+ 	 	 	 	 	},
+ 	 	 	 	 	"button": {
+ 	 	 	 	 	 	"title": {
+ 	 	 	 	 	 	 	"trans": "Versuch es noch einmal",
+ 	 	 	 	 	 	 	"eng": "Try Again"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"supportUkraine": {
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Die Menschen in der Ukraine, Russland und die ganze Welt leiden, weil der Ehrgeiz eines Mannes. \\ N LIEBE EXPLOIT, NICHT Krieg.",
+ 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
+ 	 	 	}
+ 	 	},
+ 	 	"rangeSelector": {
+ 	 	 	"selectMinValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Wählen Sie den min-Wert aus",
+ 	 	 	 	 	"eng": "Select min value"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"selectMaxValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Wählen Sie den maximalen Wert aus",
+ 	 	 	 	 	"eng": "Select max value"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"player": {
+ 	 	 	 	"success": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Sie haben ${playerName} blockiert",
+ 	 	 	 	 	"eng": "You have blocked ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"unblock": {
+ 	 	 	 	 	"trans": "Aufheben",
+ 	 	 	 	 	"eng": "Unblock"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"list": {
+ 	 	 	 	"empty": {
+ 	 	 	 	 	"trans": "Sie haben keine blockierten Spieler.",
+ 	 	 	 	 	"eng": "You have no blocked players."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"unblockModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Deblock ${playerName}",
+ 	 	 	 	 	"eng": "Unblock ${playerName}"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"npcSellPage": {
+ 	 	 	"autoSell": {
+ 	 	 	 	"trans": "Autoverkauf",
+ 	 	 	 	"eng": "Auto Sell"
+ 	 	 	}
  	 	}
  	},
  	"misc": {
@@ -3343,7 +3573,7 @@
  	 	 	"eng": "Name"
  	 	},
  	 	"tag": {
- 	 	 	"trans": "Tag",
+ 	 	 	"trans": "Schild",
  	 	 	"eng": "Tag"
  	 	},
  	 	"donate": {
@@ -3487,6 +3717,10 @@
  	 	"ok": {
  	 	 	"trans": "OK",
  	 	 	"eng": "OK"
+ 	 	},
+ 	 	"use": {
+ 	 	 	"trans": "verwenden",
+ 	 	 	"eng": "use"
  	 	}
  	},
  	"statsType": {
@@ -4134,6 +4368,10 @@
  	 	 	"reply": {
  	 	 	 	"trans": "Antworten",
  	 	 	 	"eng": "Reply"
+ 	 	 	},
+ 	 	 	"block": {
+ 	 	 	 	"trans": "Block",
+ 	 	 	 	"eng": "Block"
  	 	 	}
  	 	},
  	 	"promotion": {
@@ -4225,6 +4463,12 @@
  	 	 	"notEnough": {
  	 	 	 	"trans": "Du hast nicht genug Unit, um zu spenden.",
  	 	 	 	"eng": "You do not have enough Unit to donate."
+ 	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Möchten Sie diesen Player sicher blockieren?",
+ 	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	}
  	},
@@ -4339,7 +4583,7 @@
  	 	},
  	 	"upgradeChance4": {
  	 	 	"trans": "Kalibriergenauigkeit (Episch)",
- 	 	 	"eng": "Calibration Precision (Epic)"
+ 	 	 	"eng": "Calibration Precision (Prestige)"
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"trans": "Kalibriersicherheits Nano Bot",
@@ -4933,12 +5177,19 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price} Unit",
+ 	 	 	"trans": "${price} Einheit",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Der Titel läuft niemals aus.\\n(Er bleibt dauerhaft auf deinem Konto)",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
+ 	 	},
+ 	 	"unitPriceDiscountEndDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date"
+ 	 	 	],
+ 	 	 	"trans": "Rabatt endet in ${date}",
+ 	 	 	"eng": "Discount ends in ${date}"
  	 	}
  	},
  	"Quest": {
@@ -5101,7 +5352,7 @@
  	 	}
  	},
  	"itemTrait": {
- 		"stun": {
+ 	 	"stun": {
  	 	 	"trans": "betäuben",
  	 	 	"eng": "of Stunning"
  	 	},
@@ -5274,13 +5525,13 @@
  	 	},
  	 	"gang2": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Voodoo boys",
+ 	 	 	 	"trans": "Voodoo-Jungs",
  	 	 	 	"eng": "Voodoo boys"
  	 	 	}
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Scavengers",
+ 	 	 	 	"trans": "Sänger",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
@@ -5311,12 +5562,32 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
- 	 	 	"trans": "Moderator",
+ 	 	 	"trans": "Moderatorin",
  	 	 	"eng": "Moderator"
  	 	},
  	 	"admin": {
  	 	 	"trans": "Administrator",
  	 	 	"eng": "Admin"
+ 	 	}
+ 	},
+ 	"combat": {
+ 	 	"log": {
+ 	 	 	"enemyAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${enemyName} griffen Sie an, erhielt ${value} Schaden",
+ 	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
+ 	 	 	},
+ 	 	 	"playerAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sie haben ${enemyName} angegriffen, um ${value} Schaden zu handeln",
+ 	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
+ 	 	 	}
  	 	}
  	}
 }
