--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -9,7 +9,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chat",
+ 	 	 	"trans": "Chiacchierata",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -999,7 +999,7 @@
  	 	},
  	 	"aiCore": {
  	 	 	"name": {
- 	 	 	 	"trans": "AI Core",
+ 	 	 	 	"trans": "Hai il core",
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
@@ -1432,6 +1432,36 @@
  	 	 	 	"trans": "Una granata flash che può essere utilizzata per i nemici ciechi. Aumentare la possibilità di scappare da ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
  	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser0v1": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Contiene frammenti di avanzamento AI progettato per aiutare con l'aggiornamento di apparecchiature. Se utilizzato, diminuisce la possibilità di guasto distruttivo di ${percent}% (impilabile) per ${duration} minuti",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaserAll": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"maxStack",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Contiene frammenti di avanzamento AI progettato per aiutare con l'aggiornamento di apparecchiature. Se utilizzato, diminuisce la possibilità di guasti distruttivi di ${percent}% (impilabile per ${maxStack} ora) per ${duration} minuti. Questo effetto si applicherà a tutti i giocatori online",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser4": {
+ 	 	 	"name": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Calibrazione AI SHard (${percent}%)",
+ 	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
+ 	 	 	}
  	 	}
  	},
  	"action": {
@@ -1517,11 +1547,11 @@
  	 	},
  	 	"clanResource": {
  	 	 	"name": {
- 	 	 	 	"trans": "Gather Gang Resource",
+ 	 	 	 	"trans": "Raccogli la risorsa Gang",
  	 	 	 	"eng": "Gather Gang Resource"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Help gather and manage needed resources for your gang",
+ 	 	 	 	"trans": "Aiuta a raccogliere e gestire le risorse necessarie per la tua banda",
  	 	 	 	"eng": "Help gather and manage needed resources for your gang"
  	 	 	}
  	 	},
@@ -1724,7 +1754,7 @@
  	 	 	"eng": "${segmentDisplayName} Secret Key"
  	 	},
  	 	"unlockVerb": {
- 	 	 	"trans": "brute-force",
+ 	 	 	"trans": "forza bruta",
  	 	 	"eng": "brute-force"
  	 	},
  	 	"bruteForce": {
@@ -2100,6 +2130,30 @@
  	 	 	"cantEnterError": {
  	 	 	 	"trans": "Devi essere almeno al livello 4 per accedere al mercato",
  	 	 	 	"eng": "You need to be at least level 4 to access the market"
+ 	 	 	},
+ 	 	 	"levelSelect": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Livello",
+ 	 	 	 	 	"eng": "Level"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"tierSelection": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Rarità",
+ 	 	 	 	 	"eng": "Rarity"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"noItems": {
+ 	 	 	 	"trans": "Attualmente non ci sono articoli in vendita per questa categoria",
+ 	 	 	 	"eng": "there is currently no items on sale for this category"
+ 	 	 	},
+ 	 	 	"buy": {
+ 	 	 	 	"trans": "Acquistare",
+ 	 	 	 	"eng": "Purchase"
+ 	 	 	},
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "Rimuovere",
+ 	 	 	 	"eng": "Remove"
  	 	 	}
  	 	},
  	 	"chat": {
@@ -2540,6 +2594,10 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "Frammento di decrittazione",
  	 	 	 	 	"eng": "Decrypting shard"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Puoi lasciare questa pagina e tornare più tardi",
+ 	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
  	 	 	"noEquipment": {
@@ -2573,6 +2631,26 @@
  	 	 	"upgradeButton": {
  	 	 	 	"trans": "Calibrare",
  	 	 	 	"eng": "Calibrate"
+ 	 	 	},
+ 	 	 	"increaseSuccessButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Aumentare il tasso di successo",
+ 	 	 	 	 	"eng": "Increase Success Rate"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"preventDestructionButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Prevenire la distruzione",
+ 	 	 	 	 	"eng": "Prevent Destruction"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"failureRateNoBreak": {
+ 	 	 	 	"trans": "Possibilità di fallimento sicuro",
+ 	 	 	 	"eng": "Chance of safe failure"
+ 	 	 	},
+ 	 	 	"activateDescription": {
+ 	 	 	 	"trans": "È necessario un nucleo di calibrazione per calibrare le apparecchiature",
+ 	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	}
  	 	},
  	 	"itemInbox": {
@@ -2840,6 +2918,21 @@
  	 	 	 	 	"trans": "Compra unità",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"molecularPrinter": {
+ 	 	 	 	"printLevelDisplay": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	"level"
+ 	 	 	 	 	 	],
+ 	 	 	 	 	 	"trans": "Livello di stampa ${level} Attrezzature",
+ 	 	 	 	 	 	"eng": "printing level ${level} equipments"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "La stampa delle attrezzature è basata sul tuo rank di stampa, di livello il tuo rank di stampa stampando più elementi",
+ 	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
+ 	 	 	 	 	}
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"travel": {
@@ -2860,6 +2953,12 @@
  	 	 	"quality": {
  	 	 	 	"trans": "qualità",
  	 	 	 	"eng": "quality"
+ 	 	 	},
+ 	 	 	"itemUpgradeButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "aggiornamento",
+ 	 	 	 	 	"eng": "upgrade"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"apps": {
@@ -2878,6 +2977,10 @@
  	 	 	"skipQueue": {
  	 	 	 	"trans": "Salta la coda",
  	 	 	 	"eng": "Skip Queue"
+ 	 	 	},
+ 	 	 	"block-list": {
+ 	 	 	 	"trans": "Lista di Bloccati",
+ 	 	 	 	"eng": "Block List"
  	 	 	}
  	 	},
  	 	"gang": {
@@ -3177,7 +3280,7 @@
  	 	 	},
  	 	 	"marketShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Amadon",
+ 	 	 	 	 	"trans": "Amadone",
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
@@ -3313,6 +3416,13 @@
  	 	 	"showCanJoinOnly": {
  	 	 	 	"trans": "Mostra solo i dungeon a cui posso unirmi",
  	 	 	 	"eng": "Only show dungeons I can join"
+ 	 	 	},
+ 	 	 	"playerCount": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"playerCount"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${playerCount} Player (s) collegato",
+ 	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
  	 	"localCombat": {
@@ -3331,6 +3441,22 @@
  	 	 	"occupiedBy": {
  	 	 	 	"trans": "Occupato da",
  	 	 	 	"eng": "Occupied by"
+ 	 	 	},
+ 	 	 	"topGang": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"gangName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Occupato da ${gangName}",
+ 	 	 	 	 	"eng": "Occupied by ${gangName}"
+ 	 	 	 	},
+ 	 	 	 	"occupationPoints": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"points"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${points} Controllo occupazionale",
+ 	 	 	 	 	"eng": "${points} Occupation Control"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"craftingPage": {
@@ -3524,7 +3650,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Il tuo account è stato sospeso automaticamente dal sistema a causa di attività sospette",
- 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Suspicious Activity"
+ 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"content": {
  	 	 	 	"trans": "Se avete domande, non esitate a contattare Dexter direttamente tramite la discordia ufficiale (il collegamento può essere trovato nel menu flottante -> collegamenti) o e-mail a ching.huang.dexter@gmail.com",
@@ -3537,6 +3663,110 @@
  	 	 	 	 	"trans": "Cerca tutti i giocatori",
  	 	 	 	 	"eng": "Search all players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"minigame": {
+ 	 	 	"colors": {
+ 	 	 	 	"win": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Decrittografia riuscita",
+ 	 	 	 	 	 	"eng": "Decryption successful"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "in lavorazione",
+ 	 	 	 	 	 	"eng": "processing"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Hai trovato una scatola di bottino bloccata con tastiera a colori, dovresti essere in grado di sbloccarlo con la sequenza corretta dei colori.",
+ 	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
+ 	 	 	 	},
+ 	 	 	 	"progress": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Sbloccare progressi",
+ 	 	 	 	 	 	"eng": "Unlock progress"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"countdownSubtitle": {
+ 	 	 	 	 	"trans": "secondi",
+ 	 	 	 	 	"eng": "seconds"
+ 	 	 	 	},
+ 	 	 	 	"colorBox": {
+ 	 	 	 	 	"trans": "Clicca su questo colore qui sotto",
+ 	 	 	 	 	"eng": "Click on this color below"
+ 	 	 	 	},
+ 	 	 	 	"lose": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Decrittografia fallita",
+ 	 	 	 	 	 	"eng": "Decryption failed"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "Fare clic sulla sequenza di colore corretta per sbloccare",
+ 	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
+ 	 	 	 	 	},
+ 	 	 	 	 	"button": {
+ 	 	 	 	 	 	"title": {
+ 	 	 	 	 	 	 	"trans": "Riprova",
+ 	 	 	 	 	 	 	"eng": "Try Again"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"supportUkraine": {
+ 	 	 	"description": {
+ 	 	 	 	"trans": "La gente dell'Ucraina, la Russia e il mondo intero stanno soffrendo perché l'ambizione di un uomo. \\ N Fai lo sfruttamento dell'amore, non la guerra.",
+ 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
+ 	 	 	}
+ 	 	},
+ 	 	"rangeSelector": {
+ 	 	 	"selectMinValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Seleziona il valore minimo",
+ 	 	 	 	 	"eng": "Select min value"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"selectMaxValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Seleziona il valore massimo",
+ 	 	 	 	 	"eng": "Select max value"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"player": {
+ 	 	 	 	"success": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Hai bloccato ${playerName}",
+ 	 	 	 	 	"eng": "You have blocked ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"unblock": {
+ 	 	 	 	 	"trans": "Sbloccare",
+ 	 	 	 	 	"eng": "Unblock"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"list": {
+ 	 	 	 	"empty": {
+ 	 	 	 	 	"trans": "Non hai giocatori bloccati.",
+ 	 	 	 	 	"eng": "You have no blocked players."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"unblockModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Sblocca ${playerName}",
+ 	 	 	 	 	"eng": "Unblock ${playerName}"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"npcSellPage": {
+ 	 	 	"autoSell": {
+ 	 	 	 	"trans": "Auto Sell",
+ 	 	 	 	"eng": "Auto Sell"
  	 	 	}
  	 	}
  	},
@@ -3610,7 +3840,7 @@
  	 	 	"eng": "send"
  	 	},
  	 	"password": {
- 	 	 	"trans": "Password",
+ 	 	 	"trans": "Parola d'ordine",
  	 	 	"eng": "Password"
  	 	},
  	 	"close": {
@@ -3694,6 +3924,10 @@
  	 	"ok": {
  	 	 	"trans": "ok",
  	 	 	"eng": "OK"
+ 	 	},
+ 	 	"use": {
+ 	 	 	"trans": "utilizzo",
+ 	 	 	"eng": "use"
  	 	}
  	},
  	"statsType": {
@@ -4341,6 +4575,10 @@
  	 	 	"reply": {
  	 	 	 	"trans": "Rispondere",
  	 	 	 	"eng": "Reply"
+ 	 	 	},
+ 	 	 	"block": {
+ 	 	 	 	"trans": "Bloccare",
+ 	 	 	 	"eng": "Block"
  	 	 	}
  	 	},
  	 	"promotion": {
@@ -4432,6 +4670,12 @@
  	 	 	"notEnough": {
  	 	 	 	"trans": "Non hai abbastanza unità da donare.",
  	 	 	 	"eng": "You do not have enough Unit to donate."
+ 	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Sei sicuro di voler bloccare questo giocatore?",
+ 	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	}
  	},
@@ -4546,7 +4790,7 @@
  	 	},
  	 	"upgradeChance4": {
  	 	 	"trans": "Precisione di calibrazione (epica)",
- 	 	 	"eng": "Calibration Precision (Epic)"
+ 	 	 	"eng": "Calibration Precision (Prestige)"
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"trans": "Calibrazione Sicurezza Nano Bot",
@@ -5146,6 +5390,13 @@
  	 	"permanentDescription": {
  	 	 	"trans": "Questo titolo non scadrà mai. \\nIt rimane con il tuo account per sempre.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
+ 	 	},
+ 	 	"unitPriceDiscountEndDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date"
+ 	 	 	],
+ 	 	 	"trans": "Sconto termina in ${date}",
+ 	 	 	"eng": "Discount ends in ${date}"
  	 	}
  	},
  	"Quest": {
@@ -5475,7 +5726,7 @@
  	"npcGangs": {
  	 	"gang1": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Animals",
+ 	 	 	 	"trans": "Animali",
  	 	 	 	"eng": "Animals"
  	 	 	}
  	 	},
@@ -5487,7 +5738,7 @@
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Scavengers",
+ 	 	 	 	"trans": "Spazzine",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
@@ -5524,6 +5775,26 @@
  	 	"admin": {
  	 	 	"trans": "Amministratrice",
  	 	 	"eng": "Admin"
+ 	 	}
+ 	},
+ 	"combat": {
+ 	 	"log": {
+ 	 	 	"enemyAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${enemyName} ti ha attaccato, ha ricevuto danno ${value}",
+ 	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
+ 	 	 	},
+ 	 	 	"playerAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Hai attaccato ${enemyName}, distribuire danni da ${value}",
+ 	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
+ 	 	 	}
  	 	}
  	}
 }
