--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -62,7 +62,7 @@
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
  	 	 	 	],
  	 	 	 	"eng": [
- 	 	 	 	 	"สวัสดี! บริจาคเพื่อรับสิทธิพิเศษด้านของตกแต่งและช่วยสนับสนุนเกมแนว Free-to-Win แบบนี้นะ!"
+ 	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
  	 	 	 	]
  	 	 	}
  	 	},
@@ -134,7 +134,7 @@
  	 	 	 	 	"Hey kid... Come check out my goods."
  	 	 	 	],
  	 	 	 	"eng": [
- 	 	 	 	 	"เฮ้ เจ้าหนู... มาดูสินค้าดีๆ ของฉันสิ"
+ 	 	 	 	 	"Hey kid... Come check out my goods."
  	 	 	 	]
  	 	 	}
  	 	},
@@ -152,7 +152,7 @@
  	 	 	 	 	"Welcome. What can I store for you?"
  	 	 	 	],
  	 	 	 	"eng": [
- 	 	 	 	 	"ยินดีต้อนรับจ่ะ ฉันจะเก็บอะไรให้คุณได้บ้างจ้ะ?"
+ 	 	 	 	 	"Welcome. What can I store for you?"
  	 	 	 	]
  	 	 	}
  	 	},
@@ -174,7 +174,7 @@
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
  	 	 	 	],
  	 	 	 	"eng": [
- 	 	 	 	 	"ใส่แกนปรับเทียบเข้าไปในเครื่อง และฉันจะช่วยคุณปรับเทียบอุปกรณ์ของคุณเอง"
+ 	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
  	 	 	 	]
  	 	 	}
  	 	},
@@ -1040,7 +1040,7 @@
  	 	},
  	 	"healing9": {
  	 	 	"name": {
- 	 	 	 	"trans": "Legendary Nano Medic Bot",
+ 	 	 	 	"trans": "ตำนาน Nano Medic Bot",
  	 	 	 	"eng": "Legendary Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -1180,7 +1180,7 @@
  	 	},
  	 	"rngInterferer": {
  	 	 	"name": {
- 	 	 	 	"trans": "RNG Interferer",
+ 	 	 	 	"trans": "rng interferer",
  	 	 	 	"eng": "RNG Interferer"
  	 	 	},
  	 	 	"description": {
@@ -1215,7 +1215,7 @@
  	 	},
  	 	"flashGrenade": {
  	 	 	"name": {
- 	 	 	 	"trans": "Flash Grenade",
+ 	 	 	 	"trans": "ระเบิดมือแฟลช",
  	 	 	 	"eng": "Flash Grenade"
  	 	 	},
  	 	 	"description": {
@@ -1224,6 +1224,36 @@
  	 	 	 	],
  	 	 	 	"trans": "ระเบิดแสงที่สามารถใช้ในการตาบอดศัตรู เพิ่มโอกาสในการหลบหนีจาก ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser0v1": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "มีชิ้นส่วนของ AI ขั้นสูงที่ออกแบบมาเพื่อช่วยในการอัพเกรดอุปกรณ์ เมื่อใช้งานลดโอกาสในการทำลายล้างโดย ${percent}% (ซ้อนกันได้) สำหรับ ${duration} นาที",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaserAll": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"maxStack",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "มีชิ้นส่วนของ AI ขั้นสูงที่ออกแบบมาเพื่อช่วยในการอัพเกรดอุปกรณ์ เมื่อใช้แล้วลดโอกาสในการทำลายความล้มเหลวในการทำลายล้าง ${percent}% (วางซ้อนกันได้สำหรับ ${maxStack} ครั้ง) สำหรับ ${duration} นาทีผลนี้จะนำไปใช้กับผู้เล่นทุกคนออนไลน์",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser4": {
+ 	 	 	"name": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "การสอบเทียบ ai shard (${percent}%)",
+ 	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	}
  	},
@@ -1893,6 +1923,30 @@
  	 	 	"cantEnterError": {
  	 	 	 	"trans": "คุณต้องการอย่างน้อยเลเวล 4 เพื่อเข้าถึงตลาด",
  	 	 	 	"eng": "You need to be at least level 4 to access the market"
+ 	 	 	},
+ 	 	 	"levelSelect": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "ระดับ",
+ 	 	 	 	 	"eng": "Level"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"tierSelection": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "ความหายาก",
+ 	 	 	 	 	"eng": "Rarity"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"noItems": {
+ 	 	 	 	"trans": "ขณะนี้ไม่มีรายการในการขายสำหรับหมวดหมู่นี้",
+ 	 	 	 	"eng": "there is currently no items on sale for this category"
+ 	 	 	},
+ 	 	 	"buy": {
+ 	 	 	 	"trans": "ซื้อ",
+ 	 	 	 	"eng": "Purchase"
+ 	 	 	},
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "ลบ",
+ 	 	 	 	"eng": "Remove"
  	 	 	}
  	 	},
  	 	"chat": {
@@ -2333,6 +2387,10 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "กำลังถอดรหัส",
  	 	 	 	 	"eng": "Decrypting shard"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "คุณสามารถออกจากหน้านี้และกลับมาในภายหลัง",
+ 	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
  	 	 	"noEquipment": {
@@ -2366,6 +2424,26 @@
  	 	 	"upgradeButton": {
  	 	 	 	"trans": "เริ่มการปรับเทียบ",
  	 	 	 	"eng": "Calibrate"
+ 	 	 	},
+ 	 	 	"increaseSuccessButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "เพิ่มอัตราความสำเร็จ",
+ 	 	 	 	 	"eng": "Increase Success Rate"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"preventDestructionButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "ป้องกันการทำลาย",
+ 	 	 	 	 	"eng": "Prevent Destruction"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"failureRateNoBreak": {
+ 	 	 	 	"trans": "โอกาสของความล้มเหลวที่ปลอดภัย",
+ 	 	 	 	"eng": "Chance of safe failure"
+ 	 	 	},
+ 	 	 	"activateDescription": {
+ 	 	 	 	"trans": "ต้องมีการสอบเทียบหลักในการปรับเทียบอุปกรณ์",
+ 	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	}
  	 	},
  	 	"itemInbox": {
@@ -2633,6 +2711,21 @@
  	 	 	 	 	"trans": "หน่วยซื้อ",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"molecularPrinter": {
+ 	 	 	 	"printLevelDisplay": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	"level"
+ 	 	 	 	 	 	],
+ 	 	 	 	 	 	"trans": "การพิมพ์ระดับ ${level} อุปกรณ์",
+ 	 	 	 	 	 	"eng": "printing level ${level} equipments"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "การพิมพ์อุปกรณ์ขึ้นอยู่กับอันดับการพิมพ์ของคุณเพิ่มอันดับการพิมพ์ของคุณโดยการพิมพ์รายการเพิ่มเติม",
+ 	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
+ 	 	 	 	 	}
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"travel": {
@@ -2653,6 +2746,12 @@
  	 	 	"quality": {
  	 	 	 	"trans": "คุณภาพ",
  	 	 	 	"eng": "quality"
+ 	 	 	},
+ 	 	 	"itemUpgradeButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "อัพเกรด",
+ 	 	 	 	 	"eng": "upgrade"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"apps": {
@@ -2671,6 +2770,10 @@
  	 	 	"skipQueue": {
  	 	 	 	"trans": "ข้ามคิว",
  	 	 	 	"eng": "Skip Queue"
+ 	 	 	},
+ 	 	 	"block-list": {
+ 	 	 	 	"trans": "รายการบล็อก",
+ 	 	 	 	"eng": "Block List"
  	 	 	}
  	 	},
  	 	"gang": {
@@ -3106,6 +3209,13 @@
  	 	 	"showCanJoinOnly": {
  	 	 	 	"trans": "แสดงดันเจี้ยนที่ฉันสามารถเข้าร่วมได้",
  	 	 	 	"eng": "Only show dungeons I can join"
+ 	 	 	},
+ 	 	 	"playerCount": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"playerCount"
+ 	 	 	 	],
+ 	 	 	 	"trans": "เชื่อมต่อ ${playerCount} ผู้เล่น",
+ 	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
  	 	"localCombat": {
@@ -3124,6 +3234,22 @@
  	 	 	"occupiedBy": {
  	 	 	 	"trans": "ครอบครองโดย",
  	 	 	 	"eng": "Occupied by"
+ 	 	 	},
+ 	 	 	"topGang": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"gangName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "ครอบครองโดย ${gangName}",
+ 	 	 	 	 	"eng": "Occupied by ${gangName}"
+ 	 	 	 	},
+ 	 	 	 	"occupationPoints": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"points"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${points} การควบคุมอาชีพ",
+ 	 	 	 	 	"eng": "${points} Occupation Control"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"craftingPage": {
@@ -3317,7 +3443,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "บัญชีของคุณถูกระงับโดยอัตโนมัติโดยระบบเนื่องจากกิจกรรมที่น่าสงสัย",
- 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Suspicious Activity"
+ 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"content": {
  	 	 	 	"trans": "หากคุณมีคำถามใด ๆ โปรดติดต่อ Dexter โดยตรงผ่าน Discord อย่างเป็นทางการ (ลิงก์สามารถพบได้ในเมนูลอยน้ำ -> ลิงก์) หรืออีเมลไปที่ ching.huang.dexter@gmail.com",
@@ -3330,6 +3456,110 @@
  	 	 	 	 	"trans": "ค้นหาผู้เล่นทุกคน",
  	 	 	 	 	"eng": "Search all players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"minigame": {
+ 	 	 	"colors": {
+ 	 	 	 	"win": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "ถอดรหัสที่ประสบความสำเร็จ",
+ 	 	 	 	 	 	"eng": "Decryption successful"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "กำลังประมวลผล",
+ 	 	 	 	 	 	"eng": "processing"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "คุณพบกล่องยกเค้าที่ล็อคพร้อมปุ่มกดสีคุณควรจะสามารถปลดล็อกได้ด้วยลำดับสีที่ถูกต้อง",
+ 	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
+ 	 	 	 	},
+ 	 	 	 	"progress": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "ปลดล็อคความคืบหน้า",
+ 	 	 	 	 	 	"eng": "Unlock progress"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"countdownSubtitle": {
+ 	 	 	 	 	"trans": "วินาที",
+ 	 	 	 	 	"eng": "seconds"
+ 	 	 	 	},
+ 	 	 	 	"colorBox": {
+ 	 	 	 	 	"trans": "คลิกที่สีนี้ด้านล่าง",
+ 	 	 	 	 	"eng": "Click on this color below"
+ 	 	 	 	},
+ 	 	 	 	"lose": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "การถอดรหัสล้มเหลว",
+ 	 	 	 	 	 	"eng": "Decryption failed"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "คลิกที่ลำดับสีที่ถูกต้องเพื่อปลดล็อก",
+ 	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
+ 	 	 	 	 	},
+ 	 	 	 	 	"button": {
+ 	 	 	 	 	 	"title": {
+ 	 	 	 	 	 	 	"trans": "ลองอีกครั้ง",
+ 	 	 	 	 	 	 	"eng": "Try Again"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"supportUkraine": {
+ 	 	 	"description": {
+ 	 	 	 	"trans": "คนของยูเครนรัสเซียและโลกทั้งโลกกำลังทุกข์ทรมานเพราะความทะเยอทะยานของชายคนหนึ่ง \\ n ทำให้ความรักใช้ประโยชน์ไม่ใช่สงคราม",
+ 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
+ 	 	 	}
+ 	 	},
+ 	 	"rangeSelector": {
+ 	 	 	"selectMinValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "เลือกมูลค่าขั้นต่ำ",
+ 	 	 	 	 	"eng": "Select min value"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"selectMaxValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "เลือกค่าสูงสุด",
+ 	 	 	 	 	"eng": "Select max value"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"player": {
+ 	 	 	 	"success": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "คุณบล็อก ${playerName}",
+ 	 	 	 	 	"eng": "You have blocked ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"unblock": {
+ 	 	 	 	 	"trans": "ปลดบล็อค",
+ 	 	 	 	 	"eng": "Unblock"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"list": {
+ 	 	 	 	"empty": {
+ 	 	 	 	 	"trans": "คุณไม่มีผู้เล่นที่ถูกบล็อก",
+ 	 	 	 	 	"eng": "You have no blocked players."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"unblockModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "ปลดบล็อก ${playerName}",
+ 	 	 	 	 	"eng": "Unblock ${playerName}"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"npcSellPage": {
+ 	 	 	"autoSell": {
+ 	 	 	 	"trans": "ขายอัตโนมัติ",
+ 	 	 	 	"eng": "Auto Sell"
  	 	 	}
  	 	}
  	},
@@ -3487,6 +3717,10 @@
  	 	"ok": {
  	 	 	"trans": "ตกลง",
  	 	 	"eng": "OK"
+ 	 	},
+ 	 	"use": {
+ 	 	 	"trans": "ใช้",
+ 	 	 	"eng": "use"
  	 	}
  	},
  	"statsType": {
@@ -3740,7 +3974,7 @@
  	 	},
  	 	"m1Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "Animals Nemesis",
+ 	 	 	 	"trans": "สัตว์ซวย",
  	 	 	 	"eng": "Animals Nemesis"
  	 	 	},
  	 	 	"description": {
@@ -3750,7 +3984,7 @@
  	 	},
  	 	"m2Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "Voodoo Nemesis",
+ 	 	 	 	"trans": "วู้ดวูดู",
  	 	 	 	"eng": "Voodoo Nemesis"
  	 	 	},
  	 	 	"description": {
@@ -3770,7 +4004,7 @@
  	 	},
  	 	"m1V": {
  	 	 	"name": {
- 	 	 	 	"trans": "Lethal",
+ 	 	 	 	"trans": "ร้ายแรง",
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
@@ -3780,7 +4014,7 @@
  	 	},
  	 	"m2V": {
  	 	 	"name": {
- 	 	 	 	"trans": "Disruptor",
+ 	 	 	 	"trans": "ขัดขวาง",
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
@@ -3790,7 +4024,7 @@
  	 	},
  	 	"m3V": {
  	 	 	"name": {
- 	 	 	 	"trans": "Makeshift",
+ 	 	 	 	"trans": "การชั่วคราว",
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
@@ -4134,6 +4368,10 @@
  	 	 	"reply": {
  	 	 	 	"trans": "ตอบกลับ",
  	 	 	 	"eng": "Reply"
+ 	 	 	},
+ 	 	 	"block": {
+ 	 	 	 	"trans": "ปิดกั้น",
+ 	 	 	 	"eng": "Block"
  	 	 	}
  	 	},
  	 	"promotion": {
@@ -4225,6 +4463,12 @@
  	 	 	"notEnough": {
  	 	 	 	"trans": "คุณไม่มีหน่วยเพียงพอที่จะบริจาค",
  	 	 	 	"eng": "You do not have enough Unit to donate."
+ 	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "คุณแน่ใจหรือว่าต้องการบล็อกเครื่องเล่นนี้?",
+ 	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	}
  	},
@@ -4339,7 +4583,7 @@
  	 	},
  	 	"upgradeChance4": {
  	 	 	"trans": "ความแม่นยำการสอบเทียบ (มหากาพย์)",
- 	 	 	"eng": "Calibration Precision (Epic)"
+ 	 	 	"eng": "Calibration Precision (Prestige)"
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"trans": "การสอบเทียบความปลอดภัยของนาโนบอท",
@@ -4350,7 +4594,7 @@
  	 	 	"eng": "RNG Interference"
  	 	},
  	 	"flashGrenade": {
- 	 	 	"trans": "Flash Grenade",
+ 	 	 	"trans": "ระเบิดมือแฟลช",
  	 	 	"eng": "Flash Grenade"
  	 	}
  	},
@@ -4939,6 +5183,13 @@
  	 	"permanentDescription": {
  	 	 	"trans": "ชื่อนี้จะไม่มีวันหมดอายุ \\ nit กับบัญชีของคุณตลอดไป",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
+ 	 	},
+ 	 	"unitPriceDiscountEndDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date"
+ 	 	 	],
+ 	 	 	"trans": "ส่วนลดสิ้นสุดลงใน ${date}",
+ 	 	 	"eng": "Discount ends in ${date}"
  	 	}
  	},
  	"Quest": {
@@ -5236,7 +5487,7 @@
  	"equipmentMarks": {
  	 	"mark1": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Lethal",
+ 	 	 	 	"trans": "ร้ายแรง",
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
@@ -5246,7 +5497,7 @@
  	 	},
  	 	"mark2": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Disruptor",
+ 	 	 	 	"trans": "ขัดขวาง",
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
@@ -5256,7 +5507,7 @@
  	 	},
  	 	"mark3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Makeshift",
+ 	 	 	 	"trans": "การชั่วคราว",
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
@@ -5268,19 +5519,19 @@
  	"npcGangs": {
  	 	"gang1": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Animals",
+ 	 	 	 	"trans": "สัตว์",
  	 	 	 	"eng": "Animals"
  	 	 	}
  	 	},
  	 	"gang2": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Voodoo boys",
+ 	 	 	 	"trans": "เด็กชายวูดู",
  	 	 	 	"eng": "Voodoo boys"
  	 	 	}
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Scavengers",
+ 	 	 	 	"trans": "สกาฟเจอร์ส",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
@@ -5317,6 +5568,26 @@
  	 	"admin": {
  	 	 	"trans": "ผู้ดูแลระบบ",
  	 	 	"eng": "Admin"
+ 	 	}
+ 	},
+ 	"combat": {
+ 	 	"log": {
+ 	 	 	"enemyAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${enemyName} โจมตีคุณได้รับ ${value} ความเสียหาย",
+ 	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
+ 	 	 	},
+ 	 	 	"playerAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "คุณโจมตี ${enemyName} จัดการ ${value} ดาเมจ",
+ 	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
+ 	 	 	}
  	 	}
  	}
 }
