--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chat",
+ 	 	 	"trans": "Povídat si",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -247,7 +247,7 @@
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
- 	 	 	 	"trans": "chat",
+ 	 	 	 	"trans": "povídat si",
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
@@ -650,6 +650,21 @@
  	 	 	 	 	"trans": "Koupit JEDNOTKY",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"molecularPrinter": {
+ 	 	 	 	"printLevelDisplay": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	 	"level"
+ 	 	 	 	 	 	],
+ 	 	 	 	 	 	"trans": "Úroveň tisku ${level} Zařízení",
+ 	 	 	 	 	 	"eng": "printing level ${level} equipments"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "Tisk zařízení je založen na vaší tiskové hodnosti, vyrovnat svůj tisk tisku tisku více položek",
+ 	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
+ 	 	 	 	 	}
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"header": {
@@ -691,7 +706,7 @@
  	 	 	 	"eng": "Street Cred"
  	 	 	},
  	 	 	"status": {
- 	 	 	 	"trans": "Status",
+ 	 	 	 	"trans": "Postavení",
  	 	 	 	"eng": "Status"
  	 	 	},
  	 	 	"bio": {
@@ -817,12 +832,52 @@
  	 	 	 	 	"trans": "Vyberte prosím položku, kterou chcete prodat",
  	 	 	 	 	"eng": "Please select the item you want to sell"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"levelSelect": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Úroveň",
+ 	 	 	 	 	"eng": "Level"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"tierSelection": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Rarita",
+ 	 	 	 	 	"eng": "Rarity"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"noItems": {
+ 	 	 	 	"trans": "V současné době nejsou k dispozici žádné položky v prodeji pro tuto kategorii",
+ 	 	 	 	"eng": "there is currently no items on sale for this category"
+ 	 	 	},
+ 	 	 	"buy": {
+ 	 	 	 	"trans": "Nákup",
+ 	 	 	 	"eng": "Purchase"
+ 	 	 	},
+ 	 	 	"remove": {
+ 	 	 	 	"trans": "Odstranit",
+ 	 	 	 	"eng": "Remove"
  	 	 	}
  	 	},
  	 	"playerStatus": {
  	 	 	"occupiedBy": {
  	 	 	 	"trans": "Obsazeno",
  	 	 	 	"eng": "Occupied by"
+ 	 	 	},
+ 	 	 	"topGang": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"gangName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Obsazený ${gangName}",
+ 	 	 	 	 	"eng": "Occupied by ${gangName}"
+ 	 	 	 	},
+ 	 	 	 	"occupationPoints": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"points"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "${points} Ovládání povolání",
+ 	 	 	 	 	"eng": "${points} Occupation Control"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"afkTask": {
@@ -1005,6 +1060,12 @@
  	 	 	"quality": {
  	 	 	 	"trans": "kvalita",
  	 	 	 	"eng": "quality"
+ 	 	 	},
+ 	 	 	"itemUpgradeButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "vylepšit",
+ 	 	 	 	 	"eng": "upgrade"
+ 	 	 	 	}
  	 	 	}
  	 	},
  	 	"captcha": {
@@ -1051,8 +1112,7 @@
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
  	 	 	 	 	"trans": "Vypadá to, že nemáte s sebou žádné léky, nakupte je ve městě v Trinoky Martu předtím, než vstoupite do dungeonu. Váš život v dungeonech po bitvě není regenerován",
-         "eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
-         
+ 	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
  	 	 	 	 	"trans": "Později",
@@ -1118,6 +1178,10 @@
  	 	 	"skipQueue": {
  	 	 	 	"trans": "Přeskočit frontu",
  	 	 	 	"eng": "Skip Queue"
+ 	 	 	},
+ 	 	 	"block-list": {
+ 	 	 	 	"trans": "Seznam blokovaných",
+ 	 	 	 	"eng": "Block List"
  	 	 	}
  	 	},
  	 	"basicInfo": {
@@ -1297,6 +1361,13 @@
  	 	 	"noDungeon": {
  	 	 	 	"trans": "V současné době zde není žádný veřejný dungeon",
  	 	 	 	"eng": "There is currently no public dungeon"
+ 	 	 	},
+ 	 	 	"playerCount": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"playerCount"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${playerCount} Přehrávač (y) připojen",
+ 	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
  	 	"equipmentUpgrade": {
@@ -1322,6 +1393,10 @@
  	 	 	 	"subTitle": {
  	 	 	 	 	"trans": "Dešifrování úlomku",
  	 	 	 	 	"eng": "Decrypting shard"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Můžete opustit tuto stránku a vrátit se později",
+ 	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
  	 	 	"noEquipment": {
@@ -1355,6 +1430,26 @@
  	 	 	"upgradeButton": {
  	 	 	 	"trans": "Kalibrovat",
  	 	 	 	"eng": "Calibrate"
+ 	 	 	},
+ 	 	 	"increaseSuccessButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Zvýšit úspěšnost",
+ 	 	 	 	 	"eng": "Increase Success Rate"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"preventDestructionButton": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Zabránit zničení",
+ 	 	 	 	 	"eng": "Prevent Destruction"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"failureRateNoBreak": {
+ 	 	 	 	"trans": "Možnost bezpečného selhání",
+ 	 	 	 	"eng": "Chance of safe failure"
+ 	 	 	},
+ 	 	 	"activateDescription": {
+ 	 	 	 	"trans": "Pro kalibraci zařízení je nutné kalibrační jádro",
+ 	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	}
  	 	},
  	 	"landing": {
@@ -1528,7 +1623,7 @@
  	 	 	 	"eng": "combat"
  	 	 	},
  	 	 	"dungeon": {
- 	 	 	 	"trans": "dungeon",
+ 	 	 	 	"trans": "žalář",
  	 	 	 	"eng": "dungeon"
  	 	 	},
  	 	 	"social": {
@@ -1617,7 +1712,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Váš účet byl systémem automaticky pozastaven v důsledku Podezřelé Aktivity",
- 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Suspicious Activity"
+ 	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"content": {
  	 	 	 	"trans": "Máte-li jakékoliv dotazy neváhejte kontaktovat Dextera přímo přes oficiální discord (odkaz lze nalézt v Menu -> Odkazy) nebo zašlete e-mail na ching.huang.dexter@gmail.com",
@@ -1630,6 +1725,110 @@
  	 	 	 	 	"trans": "Hledat všechny hráče",
  	 	 	 	 	"eng": "Search all players"
  	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"minigame": {
+ 	 	 	"colors": {
+ 	 	 	 	"win": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Dešifrování úspěšného",
+ 	 	 	 	 	 	"eng": "Decryption successful"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "zpracovává se",
+ 	 	 	 	 	 	"eng": "processing"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Našli jste uzamčenou kořist s barevnou klávesnicí, měli byste jej odemknout se správným pořadem barev.",
+ 	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
+ 	 	 	 	},
+ 	 	 	 	"progress": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Odemknout pokrok",
+ 	 	 	 	 	 	"eng": "Unlock progress"
+ 	 	 	 	 	}
+ 	 	 	 	},
+ 	 	 	 	"countdownSubtitle": {
+ 	 	 	 	 	"trans": "sekundy",
+ 	 	 	 	 	"eng": "seconds"
+ 	 	 	 	},
+ 	 	 	 	"colorBox": {
+ 	 	 	 	 	"trans": "Klikněte na tuto barvu níže",
+ 	 	 	 	 	"eng": "Click on this color below"
+ 	 	 	 	},
+ 	 	 	 	"lose": {
+ 	 	 	 	 	"title": {
+ 	 	 	 	 	 	"trans": "Dešifrování se nezdařilo",
+ 	 	 	 	 	 	"eng": "Decryption failed"
+ 	 	 	 	 	},
+ 	 	 	 	 	"description": {
+ 	 	 	 	 	 	"trans": "Klikněte na správnou barevnou sekvenci pro odemknutí",
+ 	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
+ 	 	 	 	 	},
+ 	 	 	 	 	"button": {
+ 	 	 	 	 	 	"title": {
+ 	 	 	 	 	 	 	"trans": "Zkus to znovu",
+ 	 	 	 	 	 	 	"eng": "Try Again"
+ 	 	 	 	 	 	}
+ 	 	 	 	 	}
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"supportUkraine": {
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Lidé Ukrajiny, Ruska a celý svět trpí, protože ambice jednoho muže.",
+ 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
+ 	 	 	}
+ 	 	},
+ 	 	"rangeSelector": {
+ 	 	 	"selectMinValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Vyberte hodnotu MIN",
+ 	 	 	 	 	"eng": "Select min value"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"selectMaxValue": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"trans": "Vyberte max. Hodnota",
+ 	 	 	 	 	"eng": "Select max value"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"player": {
+ 	 	 	 	"success": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Jste blokovali ${playerName}",
+ 	 	 	 	 	"eng": "You have blocked ${playerName}"
+ 	 	 	 	},
+ 	 	 	 	"unblock": {
+ 	 	 	 	 	"trans": "Odblokovat",
+ 	 	 	 	 	"eng": "Unblock"
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"list": {
+ 	 	 	 	"empty": {
+ 	 	 	 	 	"trans": "Nemáte žádné blokované hráče.",
+ 	 	 	 	 	"eng": "You have no blocked players."
+ 	 	 	 	}
+ 	 	 	},
+ 	 	 	"unblockModal": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"playerName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Odblokování ${playerName}",
+ 	 	 	 	 	"eng": "Unblock ${playerName}"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"npcSellPage": {
+ 	 	 	"autoSell": {
+ 	 	 	 	"trans": "Auto Sell",
+ 	 	 	 	"eng": "Auto Sell"
  	 	 	}
  	 	}
  	},
@@ -1779,6 +1978,10 @@
  	 	"ok": {
  	 	 	"trans": "OK",
  	 	 	"eng": "OK"
+ 	 	},
+ 	 	"use": {
+ 	 	 	"trans": "použití",
+ 	 	 	"eng": "use"
  	 	}
  	},
  	"itemLore": {
@@ -2277,7 +2480,7 @@
  	 	 	},
  	 	 	"dungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "dungeon",
+ 	 	 	 	 	"trans": "žalář",
  	 	 	 	 	"eng": "dungeon"
  	 	 	 	}
  	 	 	}
@@ -3170,7 +3373,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Vysílá exploity všem kyberneticky připojeným uživatelům, dočasně upravuje jejich transakční algoritmy, což uživatelům umožňuje získat bonus ${currencyName}.\r\n\r\n         Při použití dává globální výhodu všem online hráčům, zvyšuje zisk Bitcoinu na 40% po dobu 20 minut (multiplikovatelné)",
- 	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, argument their transaction algorithm temporary, allowing user to receive bonus ${currencyName}.\r\n\r\n        When used, gives Global Buff to all players online, increase BitCoin gained by 40% for 20 minutes (stackable)\r\n        ",
+ 	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, argument their transaction algorithm temporary, allowing user to receive bonus  ${currencyName}.\r\n\r\n        When used, gives Global Buff to all players online, increase BitCoin gained by 40% for 20 minutes (stackable)\r\n        ",
  	 	 	 	"vars": [
  	 	 	 	 	"currencyName"
  	 	 	 	]
@@ -3533,6 +3736,36 @@
  	 	 	 	],
  	 	 	 	"trans": "Bleskov granát lze použít k oslepení nepřátel. Zvýšíte tím vaši šanci na únik o ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser0v1": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Obsahuje fragmenty zálohy AI navrženy tak, aby pomohly s modernizací zařízení. Když se používá, snižuje šanci na destruktivní selhání ${percent}% (stohovatelné) za ${duration} minut",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaserAll": {
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent",
+ 	 	 	 	 	"maxStack",
+ 	 	 	 	 	"duration"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Obsahuje fragmenty zálohy AI navrženy tak, aby pomohly s modernizací zařízení. Když se používá, snižuje šanci na destruktivní selhání o ${percent}% (stohovatelná za ${maxStack} Times) za ${duration} minut .Tento efekt bude platit pro všechny hráče online",
+ 	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
+ 	 	 	}
+ 	 	},
+ 	 	"upgradeChanceIncreaser4": {
+ 	 	 	"name": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Kalibrace AI Shard (${percent}%)",
+ 	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	}
  	},
@@ -4330,7 +4563,7 @@
  	 	},
  	 	"upgradeChance4": {
  	 	 	"trans": "Přesnost kalibrace (Epická)",
- 	 	 	"eng": "Calibration Precision (Epic)"
+ 	 	 	"eng": "Calibration Precision (Prestige)"
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"trans": "Nanobot Kalibrační bezpečnosti",
@@ -4671,6 +4904,10 @@
  	 	 	"reply": {
  	 	 	 	"trans": "Odpovědět",
  	 	 	 	"eng": "Reply"
+ 	 	 	},
+ 	 	 	"block": {
+ 	 	 	 	"trans": "Blok",
+ 	 	 	 	"eng": "Block"
  	 	 	}
  	 	},
  	 	"chatRuleModal": {
@@ -4917,6 +5154,12 @@
  	 	 	 	"trans": "Nemáte dostatek JEDNOTEK k darování.",
  	 	 	 	"eng": "You do not have enough Unit to donate."
  	 	 	}
+ 	 	},
+ 	 	"block": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Opravdu chcete tento přehrávač zablokovat?",
+ 	 	 	 	"eng": "Are you sure you want to block this player?"
+ 	 	 	}
  	 	}
  	},
  	"dungeonList": {
@@ -4985,6 +5228,13 @@
  	 	"permanentDescription": {
  	 	 	"trans": "Tento titul nikdy nezmizí.\\n Váš účet jej bude vlastnit navždy.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
+ 	 	},
+ 	 	"unitPriceDiscountEndDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date"
+ 	 	 	],
+ 	 	 	"trans": "Sleva končí v ${date}",
+ 	 	 	"eng": "Discount ends in ${date}"
  	 	}
  	},
  	"itemTrait": {
@@ -5204,6 +5454,26 @@
  	 	"admin": {
  	 	 	"trans": "Admin",
  	 	 	"eng": "Admin"
+ 	 	}
+ 	},
+ 	"combat": {
+ 	 	"log": {
+ 	 	 	"enemyAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${enemyName} napadl vás, přijal ${value} poškození",
+ 	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
+ 	 	 	},
+ 	 	 	"playerAttack": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"enemyName",
+ 	 	 	 	 	"value"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Jste zaútočili na ${enemyName}, zabývající se škodám ${value}",
+ 	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
+ 	 	 	}
  	 	}
  	}
 }
